Learning JDBC with Postgres

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,5 +1,6 @@
 {
     "recommendations": [
-        "leonardoleal202.vuejs-theme"
+        "leonardoleal202.vuejs-theme",
+        "zhuangtongfa.material-theme"
     ]
 }
